--- a/pages/mainTheme/mainTheme.wxml
+++ b/pages/mainTheme/mainTheme.wxml
@@ -11,9 +11,32 @@
     >
         <view class="item_txt">{{item.name}}</view>
     </view>-->
-    <swiper class="swiper" previous-margin="70rpx" next-margin="70rpx">
-        <swiper-item wx:for="{{5}}" wx:key="index">
-            <view class="banner_item"></view>
+    <swiper class="swiper" previous-margin="62rpx" next-margin="62rpx" circular bindchange="swiperChange">
+        <swiper-item wx:for="{{list}}" wx:key="index">
+            <view class="banner_item">
+                <image class="banner_img" src="{{item.imagesUrl}}" mode="widthFIx"></image>
+                <view class="flex banner_bottom">
+                    <view class="bottom_btn" bindtap="playBtn" data-idx="{{index}}">播放视频</view>
+                    <view class="bottom_btn"
+                          data-is-son="{{item.sonSubject == 'Y'}}"
+                          data-theme-name="{{item.name}}"
+                          data-id="{{item.id}}"
+                          bindtap="navDetails"
+                    >
+                        查看详情
+                    </view>
+                </view>
+            </view>
         </swiper-item>
     </swiper>
+    <view class="flex cot_wrap">
+        <view class="swiper_cot {{index==currentIdx?'current_idx':''}}" wx:for="{{list}}" wx:key="index"></view>
+    </view>
+    <view class="play_mask" wx:if="{{isOpenClose}}">
+        <view class="video_wrap">
+            <video class="video" autoplay src="https://www.mengniuhealth.cn/imgFile/29318801.mp4"></video>
+            <view class="iconfont icon-guanbi" bindtap="closeVideo"></view>
+        </view>
+
+    </view>
 </block>
