--- a/pages/mainTheme/mainTheme.wxss
+++ b/pages/mainTheme/mainTheme.wxss
@@ -37,5 +37,86 @@
     height: 870rpx;
     background: #D8D8D8;
     border-radius: 30rpx;
-    margin-right: 46rpx;
+    /*margin-right: 46rpx;*/
+    margin: 0 23rpx;
+    position: relative;
+}
+
+.banner_img {
+    width: 100%;
+    height: 100%;
+    border-radius: 30rpx;
+}
+
+.banner_bottom {
+    position: absolute;
+    bottom: 25rpx;
+    font-size: 28rpx;
+    color: #FFFFFF;
+    margin: 0 32rpx;
+    justify-content: space-between;
+    width: 516rpx;
+}
+
+.bottom_btn {
+    width: 220rpx;
+    height: 50rpx;
+    border-radius: 36rpx;
+    border: 1rpx solid #F1D59C;
+    background: #BFA267;
+    text-align: center;
+    line-height: 50rpx;
+}
+
+.swiper_cot {
+    width: 14rpx;
+    height: 14rpx;
+    border-radius: 14rpx;
+    border: 1rpx solid #BFA267;
+    margin-right: 14rpx;
+}
+
+.cot_wrap {
+    width: 580rpx;
+    margin: 87rpx auto 0;
+    justify-content: center;
+}
+
+.current_idx {
+    width: 84rpx;
+    height: 14rpx;
+    background: #BFA267;
+    border-radius: 14rpx;
+}
+
+.play_mask {
+    width: 750rpx;
+    background-color: rgba(0,0,0, .5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+}
+
+.video_wrap {
+    width: 750rpx;
+    height: 450rpx;
+    position: absolute;
+    top: 40%;
+    transform: translateY(-50%);
+}
+
+.video {
+    width: 750rpx;
+    height: 450rpx;
+}
+
+.icon-guanbi {
+    color: #fff;
+    width: 80rpx;
+    height: 80rpx;
+    text-align: center;
+    margin: 30rpx auto 0;
+    border-radius: 50rpx;
+    line-height: 80rpx;
+    border: 1rpx solid #fff;
 }
