--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,19 +1,25 @@
 @import "../index/index.wxss";
-.search-input {
-    display: flex;
-    width: 597rpx;
-    height: 54rpx;
-    background-color: #F5F5F5;
-    border-radius:12rpx;
-    margin-left: 28rpx;
-    align-items: center;
-}
+
 .search-content {
     display: flex;
     font-size:26rpx;
-    margin-top: 18rpx;
-    padding-bottom: 17rpx;
-    border-bottom: 1rpx solid #EFECEC;
+    padding: 18rpx 0 17rpx 30rpx;
+}
+
+.search-input {
+    display: flex;
+    background-color: #F5F5F5;
+    align-items: center;
+    width: 588rpx;
+    height: 48rpx;
+    border-radius: 24rpx;
+}
+
+.search-input_wrap {
+    width: 596rpx;
+    height: 56rpx;
+    border-radius: 28rpx;
+    justify-content: center;
 }
 .search-input image {
     width: 24rpx;
@@ -22,7 +28,7 @@
 }
 .search-input input {
     height: 100%;
-    color: #4A4949;
+    color: #BFA267;
     width: 527rpx;
 }
 .gohome {
@@ -31,14 +37,17 @@
     width: 81rpx;
     text-align: right;
     padding-right: 20rpx;
+    color: #BFA267;
 }
 .hot-search {
-    color: #878787;
-    margin-top: 36rpx;
-    margin-left: 27rpx;
+    margin-top: 40rpx;
+    margin-left: 30rpx;
     margin-bottom: 24rpx;
-    font-size: 24rpx;
+    font-size: 32rpx;
+    color: #333333;
+    line-height: 38rpx;
 }
+
 .keywords {
     display: flex;
     font-size: 24rpx;
@@ -46,10 +55,23 @@
     margin-left: 28rpx;
     flex-wrap: wrap;
 }
+
 .keywords li {
-    padding: 16rpx 20rpx 17rpx 19rpx;
-    background-color: #F4F4F4;
     margin-right: 22rpx;
     margin-bottom: 22rpx;
-    border-radius:8rpx;
+    border-radius:44rpx;
+    height: 46rpx;
+    background-color: #BFA267;
+    align-items: center;
+    padding: 4rpx;
+}
+
+.keywords_item {
+    width: 100%;
+    border-radius: 42rpx;
+    background-color: #fff;
+    font-size: 28rpx;
+    line-height: 36rpx;
+    color: #BFA267;
+    padding: 4rpx 16rpx;
 }
