--- a/app.wxss
+++ b/app.wxss
@@ -1,7 +1,7 @@
 @import "iconfont.wxss";
 
 view, text, input, textarea, button {
-  font-family: SourceHanSansSC-Regular, SourceHanSansSC;
+  font-family: 'PingFang SC', 'Microsoft Yahei';
 }
 /**app.wxss**/
 .container {
