--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -20,6 +20,10 @@ time, mark, audio, video, input {
   font-weight: normal;
   vertical-align: baseline;
 }
+button {
+  padding: 0;
+  border: none;
+}
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
