--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -224,15 +224,24 @@ page {
     position: fixed;
     bottom: 0rpx;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 750rpx;
+    background-color: rgba(0,0,0,.8);
 }
 
-.ad3 image {
+.ad_content {
+    width: 596rpx;
+    height: 779rpx;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+
+.ad3 ad_img {
     display: block;
-    width: 100%;
-    height: 100%;
-    background-color: #abf;
+    width: 596rpx;
+    background-color: #ccc;
+    border-radius: 50rpx;
 }
 .close_ad {
     position: absolute;
@@ -241,4 +250,11 @@ page {
     font-size: 25rpx;
     text-align: center;
     line-height: 50rpx;
+}
+
+.ad_content .new_close_ad {
+    width: 60rpx;
+    height: 60rpx;
+    display: flex;
+    margin: 50rpx auto 0;
 }
