--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -58,7 +58,7 @@
 <!--            <viex class="close_ad" bindtap="closeAd">X</viex>-->
             <view class="ad_content">
                 <image class="ad_img" src="{{item.imagesUrl}}" mode="widthFix"></image>
-                <image class="new_close_ad" src="https://www.chbice.com/imgFile/icon/close_ad.png"></image>
+                <image class="new_close_ad" bindtap="closeAd" src="https://www.chbice.com/imgFile/icon/close_ad.png"></image>
             </view>
         </view>
     </block>
