--- a/pages/specialExhibition/specialExhibition.wxml
+++ b/pages/specialExhibition/specialExhibition.wxml
@@ -14,7 +14,7 @@
                 <view class="progress">
                     <view class="progress_content"></view>
                 </view>
-                <view class="iconfont icon-shengyin"></view>
+                <view bindtap="playMusic" class="iconfont icon-shengyin"></view>
             </view>
 
             <view class="flex voice_time">
