--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -56,7 +56,7 @@
     <block wx:for="{{adList}}" wx:key="index">
         <view class="ad3" wx:if="{{item.type=='WX_APP_HOME'&&IsOpenAd}}" data-url="{{item.jumpAddress}}" bindtap="newAdNacBtn">
 <!--            <viex class="close_ad" bindtap="closeAd">X</viex>-->
-            <view class="ad_content">
+            <view class="ad_content" catchtap="stop">
                 <image class="ad_img" bindtap="navBtn" src="{{item.imagesUrl}}" mode="widthFix"></image>
                 <image class="new_close_ad" bindtap="closeAd" src="https://www.chbice.com/imgFile/icon/close_ad.png"></image>
             </view>
