--- a/pages/mainTheme/topicUnit/topicUnit.wxml
+++ b/pages/mainTheme/topicUnit/topicUnit.wxml
@@ -31,7 +31,7 @@
             <image mode="" class="img" src="{{item.imagesUrl}}"></image>
             <view class="list-right">
                 <view class="list-right-top1">{{item.name}}</view>
-                <view class="list-right-bottom">这一轮十二生肖本色银纪念 币采用写实手法，其设计者 是上海造币有限公司的朱熙华</view>
+                <view class="list-right-bottom">{{item.imagesRemark}}</view>
             </view>
         </view>
     </view>
