--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -3,7 +3,7 @@
     <view class="detail_content_wrap common_wrap">
         <view class="detail_content" style='margin-bottom:{{btuBottom}}'>
             <view class="tab_td6">{{obj.tiele}}</view>
-            <view class="tab_name">500克圆形银 质纪念币</view>
+            <!-- <view class="tab_name">500克圆形银 质纪念币</view> -->
             <view class="content_images">
                 <image mode="aspectFit" src="{{obj.url1}}"></image>
             </view>
