--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -2,8 +2,8 @@
 
     <view class="detail_content_wrap common_wrap">
         <view class="detail_content" style='margin-bottom:{{btuBottom}}'>
-            <view class="tab_td6">{{obj.tiele}}</view>
-            <!-- <view class="tab_name">500克圆形银 质纪念币</view> -->
+            <view class="tab_td6" wx:if="{{obj.tiele}}">{{obj.tiele}}</view>
+            <view class="tab_name" wx:if="{{obj.subTiele}}">{{obj.subTiele}}</view>
             <view class="content_images">
                 <image mode="aspectFit" src="{{obj.url1}}"></image>
             </view>
@@ -47,29 +47,29 @@
                     <view class="tab_td5">{{obj.moneyYear}}</view>
                 </view>
                 <view class="tab_tr bottom">
-                    <view class="tab_td1">直径(毫米)</view>
-                    <view class="tab_td5">{{obj.moneyDiameter}}</view>
-                </view>
-                <view class="tab_tr bottom">
                     <view class="tab_td1">面额(元)</view>
                     <view class="tab_td5">{{obj.moneySum}}</view>
+                </view>
+                <view class="tab_tr bottom">
+                    <view class="tab_td1">材质</view>
+                    <view class="tab_td5">{{obj.moneyTexture}}</view>
+                </view>
+
+                <view class="tab_tr bottom">
+                    <view class="tab_td1">质量</view>
+                    <view class="tab_td5">{{obj.moneyQuality}}</view>
+                </view>
+                <view class="tab_tr bottom">
+                    <view class="tab_td1">直径(毫米)</view>
+                    <view class="tab_td5" style="font-size: 24rpx;">{{obj.moneyDiameter}}</view>
                 </view>
                 <view class="tab_tr bottom">
                     <view class="tab_td1">成色</view>
                     <view class="tab_td5">{{obj.moneyFineness}}</view>
                 </view>
                 <view class="tab_tr bottom">
-                    <view class="tab_td1">材质</view>
-                    <view class="tab_td5">{{obj.moneyTexture}}</view>
-                </view>
-                <view class="tab_tr bottom">
                     <view class="tab_td1">重量</view>
                     <view class="tab_td5">{{obj.moneyWeight}}</view>
-                </view>
-
-                <view class="tab_tr bottom">
-                    <view class="tab_td1">质量</view>
-                    <view class="tab_td5">{{obj.moneyQuality}}</view>
                 </view>
                 <view class="tab_tr bottom">
                     <view class="tab_td1">发行量(枚)</view>
