--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,6 +1,6 @@
 <view class="detail_wrap">
 
-    <view class="detail_content_wrap common_wrap">
+    <view class="detail_content_wrap common_wrap" style="padding-bottom: 120rpx;">
         <view class="detail_content">
             <view class="tab_td6" wx:if="{{obj.tiele}}">{{obj.tiele}}</view>
             <view class="tab_name" wx:if="{{obj.subTiele}}">{{obj.subTiele}}</view>
@@ -114,6 +114,6 @@
         <view wx:if="{{tempFilePath}}" class="showImg_save {{iphoneX?'showImg_save1':''}}" catchtap="btnClick">保存</view>
     </view>
     <view class="canvas-img">
-        <canvas canvas-id="canvasShare" style="width: 100%; height: 1206rpx"></canvas>
+        <canvas canvas-id="canvasShare" style="width: 100%; height: {{SystemInfo.windowHeight}}px"></canvas>
     </view>
 </view>
