--- a/pages/mainTheme/mainTheme.wxss
+++ b/pages/mainTheme/mainTheme.wxss
@@ -34,7 +34,7 @@
 
 .banner_item {
     width: 580rpx;
-    height: 870rpx;
+    /* height: 870rpx; */
     background: #D8D8D8;
     border-radius: 30rpx;
     /*margin-right: 46rpx;*/
@@ -46,6 +46,7 @@
     width: 100%;
     height: 100%;
     border-radius: 30rpx;
+    display: block;
 }
 
 .banner_bottom {
